-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 15
-
Component/s: hotspot
-
b13
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8240806 | 14.0.2 | Christian Hagedorn | P3 | Resolved | Fixed | b01 |
| JDK-8247217 | 13.0.4 | Christian Hagedorn | P3 | Resolved | Fixed | b05 |
| JDK-8240594 | 11.0.8-oracle | Christian Hagedorn | P3 | Resolved | Fixed | b01 |
| JDK-8240479 | 11.0.8 | Christian Hagedorn | P3 | Resolved | Fixed | b01 |
| JDK-8245163 | openjdk8u262 | Christian Hagedorn | P3 | Resolved | Fixed | b03 |
$ CONF=linux-x86_64-server-fastdebug make images run-test TEST=java/util/concurrent/ TEST_VM_OPTS="-XX:+VerifyGraphEdges"
==============================
Test summary
==============================
TEST TOTAL PASS FAIL ERROR
>> jtreg:test/jdk/java/util/concurrent 108 102 1 5 <<
==============================
Example hs_err excerpt:
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/opto/gcm.cpp:1443), pid=13423, tid=13443
# assert(!VerifyGraphEdges) failed: verification should have failed
#
# Problematic frame:
# V [libjvm.so+0xb23f3e] PhaseCFG::global_code_motion()+0x3de
--------------- T H R E A D ---------------
Current thread (0x00007fb080458000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=13443, stack(0x00007fb06010a000,0x00007fb06020b000)]
Current CompileTask:
C2: 33347 1305 4 java.util.concurrent.locks.AbstractQueuedSynchronizer::hasQueuedPredecessors (58 bytes)
Stack: [0x00007fb06010a000,0x00007fb06020b000], sp=0x00007fb060205df0, free space=1007k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xb23f3e] PhaseCFG::global_code_motion()+0x3de
V [libjvm.so+0xb268e1] PhaseCFG::do_global_code_motion()+0x51
V [libjvm.so+0x85909f] Compile::Code_Gen()+0x26f
V [libjvm.so+0x85d502] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1342
V [libjvm.so+0x6d1e50] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x110
V [libjvm.so+0x869a6b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2db
V [libjvm.so+0x86aaa8] CompileBroker::compiler_thread_loop()+0x538
V [libjvm.so+0x1689d76] JavaThread::thread_main_inner()+0x206
V [libjvm.so+0x168eba6] Thread::call_run()+0xf6
V [libjvm.so+0x128cc2e] thread_native_entry(Thread*)+0x10e
- backported by
-
JDK-8240479 java/util/concurrent tests fail with -XX:+VerifyGraphEdges: assert(!VerifyGraphEdges) failed: verification should have failed
-
- Resolved
-
-
JDK-8240594 java/util/concurrent tests fail with -XX:+VerifyGraphEdges: assert(!VerifyGraphEdges) failed: verification should have failed
-
- Resolved
-
-
JDK-8240806 java/util/concurrent tests fail with -XX:+VerifyGraphEdges: assert(!VerifyGraphEdges) failed: verification should have failed
-
- Resolved
-
-
JDK-8245163 java/util/concurrent tests fail with -XX:+VerifyGraphEdges: assert(!VerifyGraphEdges) failed: verification should have failed
-
- Resolved
-
-
JDK-8247217 java/util/concurrent tests fail with -XX:+VerifyGraphEdges: assert(!VerifyGraphEdges) failed: verification should have failed
-
- Resolved
-
- duplicates
-
JDK-8239850 Shenandoah: VerifyGraphEdges verification failed in PhaseCFG::global_code_motion()
-
- Closed
-
- is blocked by
-
JDK-8167300 Scheduling failures during gcm should be fatal
-
- Resolved
-
- relates to
-
JDK-8239850 Shenandoah: VerifyGraphEdges verification failed in PhaseCFG::global_code_motion()
-
- Closed
-